dist/docs/3.2.0-rc.2/building/concepts/protocol-comparison.mdx
---
title: Protocol Comparison
description: "MCP vs A2A for AdCP: side-by-side comparison of transport formats, async handling, status systems, and when to use each protocol for advertising agent integration."
"og:title": "AdCP — Protocol Comparison"
---

Both MCP and A2A provide identical AdCP capabilities using the same unified status system. They differ only in transport format and async handling.

## Quick Comparison

| Aspect | MCP | A2A |
|--------|-----|-----|
| **Request Style** | Tool calls | Task messages |
| **Response Style** | Direct JSON | Artifacts |
| **Status System** | Unified status field | Unified status field |
| **Async Handling** | AdCP status payloads over tool calls; optional MCP Tasks wrapper | AdCP status payloads in A2A artifacts; optional SSE streaming |
| **Webhooks** | `push_notification_config` in tool args | Native PushNotificationConfig |
| **Task Management** | AdCP `task_id` via webhooks or AdCP polling (`get_task_status`, legacy `tasks/get`) | AdCP `task_id` via webhooks or AdCP polling |
| **Context** | Authenticated transport session; no AdCP session argument | Native `contextId` |
| **Best For** | Claude, AI assistants | Agent workflows |

## Unified Status System

Both protocols use the same status field with consistent values.

### Status Handling (Both Protocols)

Every response includes a status field that tells you exactly what to do:

```json
{
  "status": "input-required",    // Same values for both protocols
  "message": "Need your budget", // Same human explanation
  // ... protocol-specific formatting below
}
```

| Status | What It Means | Your Action |
|--------|---------------|-------------|
| `completed` | Task finished | Process data, show success |
| `input-required` | Need user input | Read message, prompt user, follow up |
| `working` | Processing (< 120s) | Wait for the open call/stream result; show progress |
| `submitted` | Long-running (hours to days) | Provide webhook or poll less frequently |
| `failed` | Error occurred | Show error, handle gracefully |
| `auth-required` | Need auth | Prompt for credentials |

See [Task Lifecycle](/dist/docs/3.2.0-rc.2/building/by-layer/L3/task-lifecycle) for complete status handling guide.

## Transport Format Differences

Same status and data, different packaging:

### MCP Response Format
```json
{
  "status": "input-required",
  "message": "I need your budget and target audience",
  "task_id": "task-123",
  "context_id": "ctx-123", // optional compatibility metadata, not MCP session state
  "products": [],
  "suggestions": ["budget", "audience"]
}
```

### A2A Response Format
```json
{
  "status": "input-required",
  "contextId": "ctx-123",
  "artifacts": [{
    "artifactId": "artifact-product-discovery-xyz",
    "name": "product_discovery",
    "parts": [
      {
        "kind": "text",
        "text": "I need your budget and target audience"
      },
      {
        "kind": "data",
        "data": {
          "products": [],
          "suggestions": ["budget", "audience"]
        }
      }
    ]
  }]
}
```

## Async Operation Differences

Both protocols carry the same AdCP status progression:
`submitted` → `working` → `completed`/`failed`

The progression above is AdCP application state. MCP Tasks and A2A task state are transport mechanics that can deliver an AdCP payload, but they are not a replacement for AdCP task polling or reconciliation.

### MCP Task-Augmented Call (Transport Wrapper)
```javascript
// Task-augmented tool call — returns CreateTaskResult immediately
const createResult = await mcp.callTool({
  name: "create_media_buy",
  arguments: {
    buyer_ref: "acme_q1",
    packages: [...],
    push_notification_config: {  // Optional: webhook for session-outliving ops
      url: "https://buyer.com/webhooks/adcp/create_media_buy/op_123",
      authentication: { schemes: ["HMAC-SHA256"], credentials: "secret" }
    }
  },
  task: { ttl: 86400000 }  // Request task-augmented execution
});
// createResult.task = { taskId: "task-456", status: "working", pollInterval: 5000 }

// Client polls via MCP Tasks protocol (outside the LLM loop)
const status = await mcp.getTask({ taskId: "task-456" });
// status = { taskId: "task-456", status: "completed", ... }

// Retrieve the actual CallToolResult, then inspect the AdCP payload inside it
const result = await mcp.getTaskResult({ taskId: "task-456" });
// result = { content: [...], isError: false }

const adcpResponse = result.structuredContent;
if (adcpResponse.status === "submitted") {
  // The MCP task delivered the AdCP response; the media-buy workflow is still open.
  await adcp.call("get_task_status", {
    task_id: adcpResponse.task_id,
    include_result: true
  });
}
```

### A2A Async Pattern

The AdCP v3 profile returns an AdCP Submitted result inside a completed A2A
Task. The two IDs remain independent:

```json
{
  "task": {
    "id": "a2a-task-456",
    "contextId": "ctx-123",
    "status": { "state": "TASK_STATE_COMPLETED" },
    "artifacts": [{
      "artifactId": "adcp-result",
      "parts": [{
        "data": {
          "status": "submitted",
          "task_id": "adcp-task-456"
        }
      }]
    }]
  }
}
```

Poll the durable operation with a fresh activated `{ skill:
"get_task_status", input: { task_id: "adcp-task-456" } }` invocation. Do not
poll `a2a-task-456`. For transport progress while a handler is executing, use
the official A2A `SendStreamingMessage` or `SubscribeToTask` operations and
consume their `StreamResponse` SSE frames. Durable AdCP webhooks are registered
as `push_notification_config` inside the typed task input; A2A
`configuration.taskPushNotificationConfig` tracks only the transport Task.

## Context Management

### MCP: Transport Session Context
```javascript
async function callAdcp(request) {
  // Reuse the authenticated MCP connection when the host offers continuity.
  // Do not add a request-body context_id.
  return mcp.call('get_products', request);
}
```

Where the selected request schema admits `context_id` for 3.x compatibility,
MCP servers ignore it.
It cannot select session state, identity, account, authorization, task
continuation, or idempotency scope.

### A2A: Message Context
```javascript
// The server assigns contextId on the first typed invocation.
const response1 = await a2a.send({
  message: {
    messageId: crypto.randomUUID(),
    role: "ROLE_USER",
    parts: [{ data: {
      skill: "get_products",
      input: { buying_mode: "brief", brief: "Find video products" }
    } }]
  }
});

// The next Message explicitly carries the returned contextId.
const response2 = await a2a.send({
  message: {
    messageId: crypto.randomUUID(),
    contextId: response1.contextId,
    role: "ROLE_USER",
    parts: [{ data: {
      skill: "get_products",
      input: { buying_mode: "brief", brief: "Focus on premium video inventory" }
    } }]
  }
});
```

## Clarification Handling

Both protocols use the same `status: "input-required"` pattern:

```javascript
// Works for both MCP and A2A
function handleResponse(response) {
  if (response.status === 'input-required') {
    const info = promptUser(response.message);
    const continuation = verifiedContinuationFor(response);
    if (!continuation) return requireReconciliation(response);
    return resumeContinuation(continuation, info);
  }

  if (response.status === 'completed') {
    return processResults(response);
  }
}
```

## Error Handling

Both use `status: "failed"` with same error structure:

```json
{
  "status": "failed",
  "message": "Insufficient inventory for your targeting criteria",
  "context_id": "ctx-123",
  "error_code": "insufficient_inventory",
  "suggestions": ["Expand targeting", "Increase CPM"]
}
```

## Choosing a Protocol

### Choose MCP if you're using:
- Claude Desktop or Claude Code
- MCP-compatible AI assistants
- Simple tool-based integrations
- Direct JSON responses

### Choose A2A if you're using:
- Google AI agents or Agent Engine
- Multi-modal workflows (text + files)
- Real-time streaming updates
- Artifact-based data handling

### Both protocols provide:
- Same AdCP tasks and capabilities
- Unified status system for clear client logic
- Transport-native conversation handling
- Async operation support
- Human-in-the-loop workflows
- Error handling and recovery

## Next Steps

- **MCP Guide**: See [MCP Guide](/dist/docs/3.2.0-rc.2/building/by-layer/L0/mcp-guide) for tool calls and transport sessions
- **A2A Guide**: See [A2A Guide](/dist/docs/3.2.0-rc.2/building/by-layer/L0/a2a-guide) for artifacts and streaming
- **Both protocols**: Provide the same capabilities with unified status handling
